# nu_plugin_makeplot

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: lib.rs  main.rs
