[package]
name = "nu_plugin_makeplot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
image = { version = "0.24.7", features = ["png"] }
nu-plugin = "0.87.1"
nu-protocol = "0.87.1"
plotters = "0.3.3"
